--- a/styles/scss/_header.scss
+++ b/styles/scss/_header.scss
@@ -1,7 +1,6 @@
 header{
     min-height: 100vh;
-    // background: #0c2040;
-    // color: white;
+    overflow-x: hidden;
         .headerFlex{
             display: flex;
             justify-content: center;
